Fixes #21, Changing the shifts.scss file so that popups now are at the correct possitions.

--- a/assets/scss/shifts.scss
+++ b/assets/scss/shifts.scss
@@ -172,6 +172,9 @@ body{
 
 // Style for the 'take shift' modal
 .take_shift{
+
+	position: fixed;
+
 	h2 {
 		margin-bottom: 8px;
 	}
